// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseBasicCredentials > should decode an urlencoded colon in the password without splitting on it 1`] = `
{
  "password": "secret:with:colons",
  "username": "client",
}
`;

exports[`parseBasicCredentials > should decode urlencoded credentials (RFC 6749 Section 2.3.1) 1`] = `
{
  "password": "s>cret/value&more",
  "username": "client id",
}
`;

exports[`parseBasicCredentials > should keep a half that is not valid percent-encoding verbatim 1`] = `
{
  "password": "100%pure",
  "username": "admin",
}
`;

exports[`parseBasicCredentials > should keep a password containing colons intact (RFC 7617) 1`] = `
{
  "password": "pa:ss:word",
  "username": "admin",
}
`;

exports[`parseBasicCredentials > should keep a password that is only colons intact 1`] = `
{
  "password": "::",
  "username": "admin",
}
`;

exports[`parseBasicCredentials > should parse a plain username and password 1`] = `
{
  "password": "secret",
  "username": "admin",
}
`;

exports[`parseBasicCredentials > should parse an empty password 1`] = `
{
  "password": "",
  "username": "admin",
}
`;

exports[`parseBasicCredentials > should parse an empty username 1`] = `
{
  "password": "secret",
  "username": "",
}
`;
